tests/negative/symbols/unused_param.orng
// unused_param.orng:9:14: error: symbol `x` is never used
// fn return_4(x: Int, y: Int) -> Int {
//             ^
// 
fn main() -> Int {
    return_4(3, 4)
}

fn return_4(x: Int, y: Int) -> Int {
    4
}